--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,6 @@
-FROM node:16-alpine3.15
+ARG VARIANT=16-bullseye
+FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:0-${VARIANT}
+
 WORKDIR /app
 COPY package.json ./
 COPY package-lock.json ./
