--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,7 +45,8 @@
   },
   "react-dotenv": {
     "whitelist": [
-      "MAPS_API_KEY"
+      "MAPS_API_KEY",
+      "BACKEND_ADDRESS"
     ]
   },
   "devDependencies": {
