--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@fluentui/react": "^8.61.0",
+    "@iconify/icons-mdi": "^1.2.2",
+    "@iconify/react": "^3.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -52,12 +54,12 @@
   },
   "devDependencies": {
     "@types/google-map-react": "^2.1.5",
-    "json-server": "^0.17.0",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "json-server": "^0.17.0",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0"
   }
