Remove redis, add mongo container

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,32 +1,7 @@
-version: '3.8'
+version: "3.8"
 
 services:
-  app:
-    build: 
-      context: ../backend
-      dockerfile: Dockerfile
-      # args:
-      #   # Update 'VARIANT' to pick an LTS version of Node.js: 16, 14, 12.
-      #   # Append -bullseye or -buster to pin to an OS version.
-      #   # Use -bullseye variants on local arm64/Apple Silicon.
-      #   VARIANT: 16-bullseye
-
-    volumes:
-      - ..:/workspace:cached
-      
-    # Overrides default command so things don't shut down after the process ends.
-    command: sleep infinity
-
-    # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-    network_mode: service:db
-
-    # Uncomment the next line to use a non-root user for all processes.
-    # user: node
-
-    # Use "forwardPorts" in **devcontainer.json** to forward an app port locally. 
-    # (Adding the "ports" property to this file will not forward from a Codespace.)
-
-  db:
+  postgres:
     image: postgres:latest
     restart: unless-stopped
     volumes:
@@ -38,6 +13,45 @@ services:
       POSTGRES_DB: postgres
 
     # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
+    # (Adding the "ports" property to this file will not forward from a Codespace.)
+
+  mq:
+    image: rabbitmq:latest
+    restart: unless-stopped
+
+  mongodb:
+    image: mongo:latest
+    restart: unless-stopped
+
+    environment:
+      - MONGO_INITDB_DATABASE= icarDB
+    ports:
+      - 27017:27017
+
+  app:
+    build:
+      context: ../backend
+      dockerfile: Dockerfile
+      # args:
+      #   # Update 'VARIANT' to pick an LTS version of Node.js: 16, 14, 12.
+      #   # Append -bullseye or -buster to pin to an OS version.
+      #   # Use -bullseye variants on local arm64/Apple Silicon.
+      #   VARIANT: 16-bullseye
+
+    volumes:
+      - ..:/workspace:cached
+
+    # Overrides default command so things don't shut down after the process ends.
+    command: sleep infinity
+
+
+    # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
+    # network_mode: service:postgres
+
+    # Uncomment the next line to use a non-root user for all processes.
+    # user: node
+
+    # Use "forwardPorts" in **devcontainer.json** to forward an app port locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
 volumes:
