--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "jade": "^0.31.2",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.4.1",
     "morgan": "~1.9.1",
     "pg": "^8.7.3"
   },
